[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Centipod.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/CentiController.gd" type="Script" id=2]

[node name="CentiController" type="Node2D"]
script = ExtResource( 2 )
objCenti = ExtResource( 1 )

[node name="spawn_delay" type="Timer" parent="."]
one_shot = true

[node name="side_spawn_delay" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
[connection signal="timeout" from="spawn_delay" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="side_spawn_delay" to="." method="_on_side_spawn_delay_timeout"]
